--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
     "jquery-ui-bundle": "^1.12.1-migrate",
+    "jquery.nicescroll": "^3.7.6",
+    "select2": "^4.1.0-rc.0",
     "swiper": "^7.2.0"
   }
 }
