--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
+    "inputmask": "^5.0.7",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
     "jquery-ui-bundle": "^1.12.1-migrate",
